--- a/sections/section1.tex
+++ b/sections/section1.tex
@@ -10,42 +10,42 @@ Serving as the far detector for the Short-Baseline Neutrino (SBN) Program, ICARU
 Equally important to the success of ICARUS is characterization of backgrounds that can mimic the electron neutrino appearance signal.  Primary among these backgrounds is the production of neutral pions, or $\pi^{0}$s, which decay electromagnetically to photons.  $\pi^{0}$ production is mostly attributed to baryon resonance (RES) in neutrino-nucleon interactions that occur at few-GeV scale, which is also the energy at which the upcoming Deep Underground Neutrino Experiment (DUNE) neutrino beam peaks at.  An ICARUS analysis centered around neutral pions therefore not only informs us about the SBN Program's most significant background, but also provides a probe for the types of neutrino interactions expected at next-generation oscillation experiments.
 
 \subsection{Measurement}
-In this document, we report the flux-averaged differential cross section measurement of muon neutrino charged-current interactions with a single $\pi^{0}$ in the final state on argon, hereafter referred to as $\nu_{\mu}$ CC $\pi^{0}$ interactions:
+In this document, we report the measurement of muon neutrino charged-current interactions with a single $\pi^{0}$ in the final state on argon, hereafter referred to as $\nu_{\mu}$ CC $\pi^{0}$ interactions:
 \begin{equation}
     \nu_{\mu} + Ar \rightarrow \mu^{-} + \pi^{0} + 0\pi^{\pm} + X.
 \end{equation}
 Here, X represents any final state particles that are not muons or charged pions.  The ommitance of charged pions in the final state aims to exclude charged-current coherent pion production from the analysis, therefore allowing the cross section measurement to probe the resonant production mode that is more relevant to the SBN Program.
 
-Few charged-current $\pi^{0}$ measurements exist on liquid argon, and a high statistics cross section measurment of this channel at ICARUS will help constrain uncertainties in modeling resonant neutrino-nucleuon interactions.  We present the $\nu_{\mu}$ CC $\pi^{0}$ differential cross section measurement as a function of muon and neutral pion kinematic variables, with event selection being carried out by a novel machine-learning reconstruction pipeline.  Benefiting from high purity and excellent resolution in reconstructed variables, the extraction of a precise, finely-binned differential cross section is made possible.
-
+Few charged-current $\pi^{0}$ measurements exist on liquid argon, and a high statistics cross section measurment of this channel at ICARUS will help constrain uncertainties in modeling resonant neutrino-nucleuon interactions.  We present single differential cross section measurements of $\nu_{\mu}$ CC $\pi^{0}$ interactions as a function of muon and neutral pion kinematic variables, namely the momentum and angle with respect to the neutrino beam for each particle.  Event selection is carried out with a novel machine-learning reconstruction pipeline, where high purity and excellent resolution in reconstructed variables enable the extraction of precise measurements.
 
 \subsection{Data and Monte Carlo Samples}
-This analysis utilizes ICARUS data collected from the Booster Neutrino Beam (BNB) between winter 2022 and spring 2023 (ICARUS Run 2).  This collection period corresponds to approximately $2.05 \times 10^{20}$ protons on target (POT).  The analysis can be easily extended to the Neutrinos at the Main Injector (NuMI) beam, and will be in the future as data processing and treatment of systematic uncertanties allows.  Data is processed through the ICARUS reconstuction chain (see Appendices A \& B) with \textit{icaruscode} software version v09\_89\_01\_01.
+This analysis utilizes ICARUS data collected from the Booster Neutrino Beam (BNB) between winter 2022 and spring 2023 (ICARUS Run 2).  This collection period corresponds to approximately $2.05 \times 10^{20}$ protons on target (POT).  The analysis can be easily extended to the Neutrinos at the Main Injector (NuMI) beam, and will be in the future as data processing and treatment of systematic uncertanties allows.  Data is processed through the ICARUS reconstuction chain with \textit{icaruscode} software version v09\_89\_01\_02p01.
 
-Monte Carlo simulation consisting of BNB neutrinos (produced with GENIE) and cosmics (produced with CORSIKA) is used to assess selection performance.  This Monte Carlo sample corresponds to $1.74 \times 10^{10}$ POT.  To evaluate the impact from cosmic activity that occurs within the 9.6 $\mu s$ BNB beam gate, off-beam data is used (\textcolor{red}{To-do}).  A summary of production files uses in this analysis is shown in Table \ref{Tab:prod}.
+Monte Carlo simulation consisting of BNB neutrinos (produced with GENIE) and cosmics (produced with CORSIKA) is used to assess selection performance and evaulate systematic uncertainties.  This includes a central value sample as well as dedicated detector variation samples, as will be discussed in Section \ref{sec:systs}.  To evaluate the impact from cosmic activity that occurs within the 1.6 $\mu s$ BNB beam gate, off-beam data is used.  A summary of production streams used in this analysis is shown in Table \ref{Tab:prod}.
 
 \begin{table}[ht]
-    \caption{Data/Simulation Productions used for $\nu_{\mu}$ CC $\pi^{0}$ analysis.}
+    \caption{Data/simulation streams used for $\nu_{\mu}$ CC $\pi^{0}$ analysis}
     \vspace{0.1cm}
     \centering
     \begin{tabular}{ c c c } 
     \hline
-      &  Production & POT  \\
+    Sample  &  Type & POT  \\
     \hline
-    Data (on-beam) & BNB Run 2 On-Beam Majority Trigger & $2.05 \times 10^{20}$ \\ 
-    Data (off-beam) & BNB Run 2 Off-Beam Majority Trigger & N/A \\
-    Simulation & BNB $\nu$ + Cosmics & $1.74 \times 10^{20}$ \\ 
+    BNB Run 2 On-Beam Majority Trigger & Data (on-beam) & $2.05 \times 10^{20}$ \\ 
+    BNB Run 2 Off-Beam Majority Trigger & Data (off-beam) & N/A \\
+    BNB $\nu$ + Cosmics & Simulation & $1.32 \times 10^{21}$ \\
     \hline
     \end{tabular}
     \label{Tab:prod}
 \end{table}
 
-\subsubsection{Data Quality Cuts}
-To ensure the data used in this analysis is of physics quality, a number of data quality cuts are enforced.  Namely, any data collection runs that were subject to DAQ issues or happened during detector hardware updates are removed from consideration.  Additionally, cuts are made to avoid detector features that are yet to be modeled in simulation, including a field cage short in the EE TPC and a cable hanging in the active volume of the WW TPC.  A full description of all data quality cuts used in this analysis can be found in Appendix A.
+\subsubsection{Data and Beam Quality Cuts}
+\textcolor{red}{Not yet implemented}\\
+To ensure the data used in this analysis is of physics quality, a number of data and beam quality cuts are enforced.  Namely, any data collection runs that were subject to DAQ issues or happened during detector hardware updates are removed from consideration.  Additionally, cuts are made to avoid detector features that are yet to be modeled in simulation, including a field cage short in the EE TPC and a cable hanging in the active volume of the WW TPC.  A full description of all data and beam quality cuts used in this analysis can be found in Appendix A.
 
 \subsubsection{Unblinding Strategy}
 The official blinding policy of the ICARUS collaboration (doc-db 34523) states that 90 percent of data is to remain blinded until any analysis is finalized.  To comply with this policy, all analysis toward the $\nu_{\mu}$ CC $\pi^{0}$ cross section measurement shown in this document only uses the 10 percent of Run 2 data that has been unblinded.  An exception has been made for data collection run 9435, which has been completely unblinded for the purpose of visual scanning.
 
-Pending approval from the physics coordinators and event selection working group, we request access to...(\textcolor{red}{To-do})
+Pending approval from the physics coordinators and event selection working group, we request access to...(\textcolor{red}{To-do: specify unblinding request})
 
 \end{document}
